solving the overflow issue on the treeview menu

--- a/custom_/css/theme.css
+++ b/custom_/css/theme.css
@@ -96,6 +96,10 @@ body {
   text-align:center;
 }
 
+.ztree {
+  overflow-x: auto;
+}
+
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1800px;
